[package]
name = "defity"
version = "0.1.2"
edition = "2018"
exclude = ["*.so", "*.bin", "__pycache__"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "defity"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use defity;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
tree_magic_mini = "3.0.0"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]
