[package]
name = "defity"
version = "0.5.1"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/hongquan/Defity"
repository = "https://github.com/hongquan/Defity.git"
edition = "2021"
exclude = ["*.so", "*.bin", "__pycache__", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "defity"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use defity;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
tree_magic_mini = "3.2.0"

[dependencies.pyo3]
version = "0.25.1"
features = [ "extension-module", "abi3", "abi3-py310" ]

[target.'cfg(windows)'.dependencies]
tree_magic_db = { version = "3.0.1" }
tree_magic_mini = { version = "3.2.0", features = [ "with-gpl-data" ] }

[target.'cfg(macos)'.dependencies]
tree_magic_db = { version = "3.0.1" }
tree_magic_mini = { version = "3.2.0", features = [ "with-gpl-data" ] }
