[project]
name = "defity"
description = "Speedy library to detect file type from initial part of file content"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: Apache Software License",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.6.0,<2.0"]

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true

# We don't use Poetry to build and publish packages (do with Maturin instead).
# But we use Poetry to setup virtualenv in GH Action,
# and it requires at least these information.
[tool.poetry]
name = "defity"
version = "0.0.0"
description = "Speedy library to detect file type from initial part of file content"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
maturin = "^1.6.0"
pytest-mypy = "^0.10.3"
sphinx = "^7.3.7"
ruff = "^0.5.0"

[tool.ruff]
line-length = 120

target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/static/CACHE/*",
]

[tool.pytest.ini_options]
minversion = "8.0"
norecursedirs = "__pypackages__ _build"
