[project]
name = "defity"
description = "Speedy library to detect file type from initial part of file content"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]
authors = [
    {name = "Nguyễn Hồng Quân", email = "ng.hong.quan@gmail.com"},
]
dependencies = []

[dependency-groups]
dev = [
    "maturin<2.0.0,>=1.8.0",
    "pytest-mypy<1.0.0,>=0.10.3",
    "sphinx<9.0.0,>=8.1.3",
    "ruff<1.0.0,>=0.8.4",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["Cargo.lock"]
strip = true

[tool.ruff]
line-length = 120

target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/static/CACHE/*",
]

[tool.pytest.ini_options]
minversion = "8.0"
norecursedirs = "__pypackages__ _build"

